@@ -23,6 +23,21 @@
     <p>
       Powered by <a href="[% full_cgi_url%]?action=about">OpenGuides [% openguides_version %]</a>.
     </p>
+    <p>
+      [% IF licence_name %]
+        This work is licensed under the 
+        [% IF licence_url %]
+           <a href="[% licence_url %]">
+        [% END %]
+        [% licence_name %]
+        [% IF licence_url %]
+           </a>
+        [% END %]
+        licence
+        [% IF licence_info_url %]
+           (<a href="[% licence_info_url %]">more info</a>)
+        [% END %]
+      [% END %]
   [% END %]
 
 </div>
