@@ -12,6 +12,7 @@
         #103 Fix empty Category/Locale list bug.
         #54 Fix RSS redirection for backwards compatibility.
         #79 Partial fix to help combat HTML spam
+        #56 Add licence config variables
 
 0.52    5 March 2006
         IMPORTANT CHANGE: "supersearch.cgi" is now simply "search.cgi". If you
